[package]
name = "wess"
version = "1.3.0"
authors = ["Lucas Oliveira olivmath@protonmail.com"]
edition = "2018"

[dependencies]
rocksdb = { version = "0.20.1", features = ["multi-threaded-cf"] }
async-std = { version = "1.12.0", features = ["attributes"] }
wasmer = { version = "4.2.2", features = ["enable-serde"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tide-testing = "0.1.3"
serde_json = "1.0.95"
lazy_static = "1.4.0"
prometheus = "0.13.3"
sysinfo = "0.28.4"
# quinn = "0.9.3"
sha256 = "1.1.2"
log4rs = "1.2.0"
tide = "0.16.0"
rand = "0.8.5"
log = "0.4.17"
toml = "0.7.3"
