[tool.poetry]
name = "wess-qa"
version = "0.1.0"
description = ""
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]
readme = "README.md"
packages = [{ include = "wess_behave_tests" }]

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"
pyclean = "^2.7.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
